--- a/src/main/resources/view/rental_add.fxml
+++ b/src/main/resources/view/rental_add.fxml
@@ -1,45 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="535.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.RentalAddController">
+<AnchorPane prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.RentalAddController">
     <children>
-        <ImageView fx:id="image" fitHeight="240.0" fitWidth="240.0" layoutX="45.0" layoutY="60.0" pickOnBounds="true">
+        <ImageView fx:id="image" fitHeight="240.0" fitWidth="267.0" layoutX="45.0" layoutY="13.0" pickOnBounds="true">
             <image>
                 <Image url="@../assets/motorhomes/motorhome_placeholder.png" />
             </image></ImageView>
-        <Label layoutX="383.0" layoutY="88.0" text="Customer Name">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
-        <Label layoutX="225.0" layoutY="37.0" text="Motorhome Rental">
-            <font>
-                <Font size="18.0" />
-            </font></Label>
-        <Label layoutX="392.0" layoutY="156.0" text="Pick-up Location" />
-        <Label layoutX="374.0" layoutY="221.0" text="Distance to Pick-Up (KM)" />
-        <Label layoutX="421.0" layoutY="344.0" text="Start Date" />
-        <TextField fx:id="distanceTextField" layoutX="363.0" layoutY="249.0" />
-        <Label layoutX="427.0" layoutY="405.0" text="End Date" />
-        <Label layoutX="421.0" layoutY="284.0" text="Season" />
-        <TextArea fx:id="notes" layoutX="45.0" layoutY="297.0" prefHeight="115.0" prefWidth="267.0" promptText="Notes" />
-        <Button fx:id="confirmButton" layoutX="437.0" layoutY="474.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="93.0" text="Confirm" />
-        <ChoiceBox fx:id="seasonChoiceBox" layoutX="366.0" layoutY="311.0" prefHeight="25.0" prefWidth="161.0" />
-        <DatePicker fx:id="startDateDatePicker" layoutX="366.0" layoutY="370.0" prefHeight="25.0" prefWidth="180.0" />
-        <DatePicker fx:id="endDateDatePicker" layoutX="366.0" layoutY="427.0" prefHeight="25.0" prefWidth="180.0" />
-        <Button fx:id="addExtrasButton" layoutX="258.0" layoutY="474.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="93.0" text="Add Extras" />
-        <TextField fx:id="customerNameTextField" layoutX="362.0" layoutY="117.0" />
-        <TextField fx:id="pickupTextField" layoutX="363.0" layoutY="180.0" />
-        <Button fx:id="pickMotorhomeButton" layoutX="71.0" layoutY="475.0" mnemonicParsing="false" text="Pick Motorhome" />
+        <Label layoutX="339.0" layoutY="200.0" styleClass="regular-label" text="Client Last Name" />
+      <HBox alignment="CENTER" layoutX="339.0" layoutY="23.0" prefHeight="45.0" prefWidth="375.0">
+         <children>
+              <Label fx:id="title" text="Motorhome Rental">
+                  <font>
+                      <Font size="18.0" />
+                  </font>
+            </Label>
+         </children>
+      </HBox>
+        <Label layoutX="543.0" layoutY="135.0" styleClass="regular-label" text="Pick-up Location" />
+        <Label layoutX="543.0" layoutY="203.0" styleClass="regular-label" text="Distance to Pick-Up (KM)" />
+        <Label layoutX="543.0" layoutY="261.0" styleClass="regular-label" text="Start Date" />
+        <TextField fx:id="distanceTextField" layoutX="542.0" layoutY="228.0" prefHeight="25.0" prefWidth="170.0" />
+        <Label layoutX="543.0" layoutY="319.0" styleClass="regular-label" text="End Date" />
+        <Label layoutX="340.0" layoutY="317.0" styleClass="regular-label" text="Season" />
+        <TextArea fx:id="notes" layoutX="45.0" layoutY="252.0" prefHeight="115.0" prefWidth="267.0" promptText="Notes" />
+        <ChoiceBox fx:id="seasonChoiceBox" layoutX="339.0" layoutY="342.0" prefHeight="25.0" prefWidth="170.0" />
+        <DatePicker fx:id="startDateDatePicker" layoutX="542.0" layoutY="285.0" prefHeight="25.0" prefWidth="170.0" />
+        <DatePicker fx:id="endDateDatePicker" layoutX="542.0" layoutY="342.0" prefHeight="25.0" prefWidth="170.0" />
+        <TextField fx:id="customerNameTextField" layoutX="339.0" layoutY="226.0" prefHeight="25.0" prefWidth="170.0" />
+        <TextField fx:id="pickupTextField" layoutX="541.0" layoutY="159.0" prefHeight="25.0" prefWidth="170.0" />
+      <HBox alignment="CENTER" layoutY="437.0" prefHeight="45.0" prefWidth="750.0" spacing="50.0">
+         <children>
+              <Button fx:id="pickMotorhomeButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" styleClass="regular-button-rental" text="Pick Motorhome" />
+              <Button fx:id="addExtrasButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" styleClass="regular-button-rental" text="Add Extras" />
+              <Button fx:id="confirm" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" styleClass="regular-button-rental" text="Confirm" />
+         </children>
+      </HBox>
+      <Label layoutX="339.0" layoutY="133.0" styleClass="regular-label" text="Client First Name" />
+      <TextField fx:id="customerNameTextField1" layoutX="339.0" layoutY="160.0" prefHeight="25.0" prefWidth="170.0" />
+      <Label layoutX="339.0" layoutY="260.0" styleClass="regular-label" text="Client Telephone" />
+      <TextField fx:id="customerNameTextField2" layoutX="339.0" layoutY="286.0" prefHeight="25.0" prefWidth="170.0" />
     </children>
 </AnchorPane>
