Rough Rental CREATE
Most functions will probably be put into FXUtils to be reused for edit. Rough around the edges, but functionally seems OK

--- a/src/main/resources/stylesheets/rental_menu.css
+++ b/src/main/resources/stylesheets/rental_menu.css
@@ -78,3 +78,9 @@
     -fx-font-family: "Laila", Arial;
     -fx-font-size: 16px;
 }
+
+.currency {
+    -fx-font-size: 16px;
+    -fx-font-family: "Orbitron", Arial;
+    -fx-text-fill: #008000FF;
+}
