--- a/src/main/resources/view/extra_entity.fxml
+++ b/src/main/resources/view/extra_entity.fxml
@@ -11,12 +11,12 @@
    <children>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Label fx:id="nameLabel" styleClass="normal-text" text="Brand Name" />
+            <Label fx:id="nameLabel" styleClass="normal-text" text="Extra Name" />
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Label fx:id="priceLabel" styleClass="price" text="Base Price" />
+            <Label fx:id="priceLabel" styleClass="price" text="Price" />
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="35.0" prefWidth="100.0" styleClass="circleButton">
