--- a/src/main/resources/view/rental_add.fxml
+++ b/src/main/resources/view/rental_add.fxml
@@ -7,7 +7,7 @@
 
 <AnchorPane prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.RentalAddController">
     <children>
-        <ImageView fx:id="image" fitHeight="240.0" fitWidth="267.0" layoutX="45.0" layoutY="13.0" pickOnBounds="true">
+        <ImageView fx:id="image" fitHeight="220.0" fitWidth="267.0" layoutX="45.0" layoutY="33.0" pickOnBounds="true">
             <image>
                 <Image url="@../assets/motorhomes/motorhome_placeholder.png" />
             </image></ImageView>
@@ -24,25 +24,48 @@
         <Label layoutX="543.0" layoutY="135.0" styleClass="regular-label" text="Pick-up Location" />
         <Label layoutX="543.0" layoutY="203.0" styleClass="regular-label" text="Distance to Pick-Up (KM)" />
         <Label layoutX="543.0" layoutY="261.0" styleClass="regular-label" text="Start Date" />
-        <TextField fx:id="distanceTextField" layoutX="542.0" layoutY="228.0" prefHeight="25.0" prefWidth="170.0" />
+        <TextField fx:id="distanceField" layoutX="542.0" layoutY="228.0" prefHeight="25.0" prefWidth="170.0" />
         <Label layoutX="543.0" layoutY="319.0" styleClass="regular-label" text="End Date" />
         <Label layoutX="340.0" layoutY="317.0" styleClass="regular-label" text="Season" />
-        <TextArea fx:id="notes" layoutX="45.0" layoutY="252.0" prefHeight="115.0" prefWidth="267.0" promptText="Notes" />
+        <TextArea fx:id="notes" layoutX="45.0" layoutY="252.0" prefHeight="115.0" prefWidth="267.0" promptText="Notes" wrapText="true" />
         <ChoiceBox fx:id="seasonChoiceBox" layoutX="339.0" layoutY="342.0" prefHeight="25.0" prefWidth="170.0" />
         <DatePicker fx:id="startDateDatePicker" layoutX="542.0" layoutY="285.0" prefHeight="25.0" prefWidth="170.0" />
         <DatePicker fx:id="endDateDatePicker" layoutX="542.0" layoutY="342.0" prefHeight="25.0" prefWidth="170.0" />
-        <TextField fx:id="customerNameTextField" layoutX="339.0" layoutY="226.0" prefHeight="25.0" prefWidth="170.0" />
-        <TextField fx:id="pickupTextField" layoutX="541.0" layoutY="159.0" prefHeight="25.0" prefWidth="170.0" />
+        <TextField fx:id="clientLastNameField" layoutX="339.0" layoutY="226.0" prefHeight="25.0" prefWidth="170.0" />
+        <TextField fx:id="pickUpLocationField" layoutX="541.0" layoutY="159.0" prefHeight="25.0" prefWidth="170.0" />
       <HBox alignment="CENTER" layoutY="437.0" prefHeight="45.0" prefWidth="750.0" spacing="50.0">
          <children>
               <Button fx:id="pickMotorhomeButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" styleClass="regular-button-rental" text="Pick Motorhome" />
               <Button fx:id="addExtrasButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" styleClass="regular-button-rental" text="Add Extras" />
-              <Button fx:id="confirm" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" styleClass="regular-button-rental" text="Confirm" />
+              <Button fx:id="confirmButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="100.0" styleClass="regular-button-rental" text="Confirm" />
          </children>
       </HBox>
       <Label layoutX="339.0" layoutY="133.0" styleClass="regular-label" text="Client First Name" />
-      <TextField fx:id="customerNameTextField1" layoutX="339.0" layoutY="160.0" prefHeight="25.0" prefWidth="170.0" />
+      <TextField fx:id="clientFirstNameField" layoutX="339.0" layoutY="160.0" prefHeight="25.0" prefWidth="170.0" /><Label layoutX="327.0" layoutY="165.0" text="*" textFill="RED" />
       <Label layoutX="339.0" layoutY="260.0" styleClass="regular-label" text="Client Telephone" />
-      <TextField fx:id="customerNameTextField2" layoutX="339.0" layoutY="286.0" prefHeight="25.0" prefWidth="170.0" />
+      <TextField fx:id="clientTelephoneField" layoutX="339.0" layoutY="286.0" prefHeight="25.0" prefWidth="170.0" />
+      <HBox alignment="CENTER" layoutX="339.0" layoutY="385.0" prefHeight="45.0" prefWidth="375.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" />
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" />
+         </children></HBox>
+      <HBox alignment="CENTER" layoutY="385.0" prefHeight="45.0" prefWidth="750.0" spacing="50.0">
+         <children>
+            <HBox alignment="CENTER" prefHeight="45.0" prefWidth="375.0" spacing="10.0">
+               <children>
+                  <Label styleClass="regular-label" text="Daily Price:" />
+                  <Label fx:id="dailyPriceLabel" styleClass="currency" text="1000.00" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER" prefHeight="45.0" prefWidth="375.0" spacing="10.0">
+               <children>
+                  <Label styleClass="regular-label" text="Total Price" />
+                  <Label fx:id="totalPriceLabel" styleClass="currency" text="10000.00" />
+               </children>
+            </HBox>
+         </children></HBox>
+      <Label layoutX="531.0" layoutY="291.0" text="*" textFill="RED" />
+      <Label layoutX="531.0" layoutY="348.0" text="*" textFill="RED" />
+      <Label layoutX="328.0" layoutY="347.0" text="*" textFill="RED" />
     </children>
 </AnchorPane>
