--- a/src/main/resources/view/rental_add.fxml
+++ b/src/main/resources/view/rental_add.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.RentalAddController">
+<AnchorPane prefHeight="500.0" prefWidth="750.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.popup.RentalAddController">
     <children>
         <ImageView fx:id="image" fitHeight="220.0" fitWidth="267.0" layoutX="45.0" layoutY="33.0" pickOnBounds="true">
             <image>
