--- a/src/main/resources/view/rental_motorhome_selection.fxml
+++ b/src/main/resources/view/rental_motorhome_selection.fxml
@@ -8,7 +8,7 @@
 
 <!-- Author(s) Octavian Roman -->
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.RentalMotorhomeSelectionController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.popup.RentalMotorhomeSelectionController">
     <center>
         <VBox prefHeight="200.0" BorderPane.alignment="CENTER">
             <children>
