--- a/src/main/resources/view/extra_selection_entity.fxml
+++ b/src/main/resources/view/extra_selection_entity.fxml
@@ -5,7 +5,7 @@
 
 <!-- Author(s) Octavian Roman -->
 
-<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.ExtraSelectionEntityController">
+<HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.entity.ExtraSelectionEntityController">
    <children>
       <HBox alignment="CENTER" prefHeight="35.0" prefWidth="100.0" styleClass="circleButton">
          <children>
