--- a/src/main/resources/view/rental_extra_selection.fxml
+++ b/src/main/resources/view/rental_extra_selection.fxml
@@ -5,7 +5,7 @@
 
 <!-- Author(s) Octavian Roman -->
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.RentalExtraSelectionController">
+<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.popup.RentalExtraSelectionController">
    <children>
       <HBox alignment="CENTER" prefHeight="40.0" prefWidth="500.0" spacing="150.0" styleClass="newEntityBar" HBox.hgrow="ALWAYS">
          <children>
