--- a/src/main/resources/view/rental_settings.fxml
+++ b/src/main/resources/view/rental_settings.fxml
@@ -7,7 +7,7 @@
 
 <!-- Author(s) Octavian Roman -->
 
-<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.RentalSettingsController">
+<VBox prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.rental.popup.RentalSettingsController">
    <children>
       <HBox alignment="CENTER" prefHeight="40.0" prefWidth="500.0" styleClass="newEntityBar" HBox.hgrow="ALWAYS">
          <children>
