--- a/src/main/resources/view/model_entity.fxml
+++ b/src/main/resources/view/model_entity.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<!-- Author(s) Octavian Roman -->
+<!-- Author(s) Jakub Patelski -->
 
 <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.motorhome.entity.ModelEntityController">
    <children>
