--- a/src/main/resources/view/motorhome_settings.fxml
+++ b/src/main/resources/view/motorhome_settings.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<!-- Author(s) Octavian Roman -->
+<!-- Author(s) Jakub Patelski -->
 
 <TabPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.motorhome.popup.MotorhomeSettingsController">
   <tabs>
