--- a/src/main/resources/view/authentication.fxml
+++ b/src/main/resources/view/authentication.fxml
@@ -6,7 +6,7 @@
 
 <!-- Author(s) Octavian Roman -->
 
-<AnchorPane fx:id="rootPane" maxHeight="500.0" maxWidth="400.0" minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.main.AuthenticationController">
+<AnchorPane maxHeight="500.0" maxWidth="400.0" minHeight="500.0" minWidth="400.0" prefHeight="500.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.motorhome.controller.main.AuthenticationController">
    <ImageView fitHeight="500.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true">
       <Image url="@../assets/authentication.jpg" />
    </ImageView>
