--- a/src/main/resources/view/rental_entity.fxml
+++ b/src/main/resources/view/rental_entity.fxml
@@ -32,7 +32,7 @@
       </HBox>
       <HBox alignment="CENTER" layoutX="490.0" layoutY="10.0" prefHeight="80.0" prefWidth="150.0" HBox.hgrow="ALWAYS">
          <children>
-            <Label fx:id="priceLabel" styleClass="entity-label-text" text="Price" />
+            <Label fx:id="priceLabel" styleClass="currency" text="Price" />
          </children>
       </HBox>
       <HBox alignment="CENTER" layoutX="690.0" layoutY="10.0" prefHeight="80.0" prefWidth="150.0" HBox.hgrow="ALWAYS">
