--- a/src/main/resources/view/rental_add.fxml
+++ b/src/main/resources/view/rental_add.fxml
@@ -22,7 +22,7 @@
          </children>
       </HBox>
         <Label layoutX="543.0" layoutY="135.0" styleClass="regular-label" text="Pick-up Location" />
-        <Label layoutX="543.0" layoutY="203.0" styleClass="regular-label" text="Distance to Pick-Up (KM)" />
+        <Label layoutX="543.0" layoutY="203.0" styleClass="regular-label" text="Distance Surcharge (KM)" />
         <Label layoutX="543.0" layoutY="261.0" styleClass="regular-label" text="Start Date" />
         <TextField fx:id="distanceField" layoutX="542.0" layoutY="228.0" prefHeight="25.0" prefWidth="170.0" />
         <Label layoutX="543.0" layoutY="319.0" styleClass="regular-label" text="End Date" />
